fix navbar overlapping issues

--- a/css/arrivals.css
+++ b/css/arrivals.css
@@ -17,8 +17,8 @@ body {
     float: left;
     margin: 16px 46px;
     color: white;
-    font-weight: 500;
-    font-size: 30px;
+    font-weight: bold;
+    font-size: 32px;
     letter-spacing: 2px;
 }
 
@@ -29,6 +29,7 @@ nav {
     margin-top: 0;
     z-index: 1;
     background-color: rgb(221, 84, 29);
+    box-shadow: 2px 0 7px rgba(0, 0, 0, 0.3);
 }
 
 nav ul {
@@ -72,19 +73,32 @@ nav ul li a,
     color: white;
     font-size: 16px;
     text-transform: uppercase;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .menu-icon {
-    line-height: 60px;
-    width: 100%;
     background: rgb(221, 84, 29);
-    text-align: right;
-    box-sizing: border-box;
-    padding: 15px 24px;
-    cursor: pointer;
-    color: white;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 80px;
+    box-shadow: 2px 0 7px rgba(0, 0, 0, 0.3);
     display: none;
+}
+.bar-icon{
+    position: absolute;
+    right: 40px;
+    top: 30px;
+    cursor: pointer;
+}
+.bar{
+    width: 35px;
+    height: 6px;
+    background-color: #fff;
+    margin-bottom: 5px;
+    border-radius: 2px;
+    cursor: pointer;
 }
 
 nav ul li a::before {
@@ -122,4 +136,54 @@ nav ul li a:hover:before {
     margin: auto;
     background-color: rgb(224, 223, 223);
     border: 3px solid white;
+}
+
+@media (max-width: 1155px){
+    nav ul li {
+        padding: 16px 2.2%;
+    }
+    nav ul{
+        padding-right: 20px;
+        width: 80%;
+        float: right;
+    }
+}
+@media (max-width: 950px){
+    nav ul li {
+        padding: 16px 1.7%;
+    }
+    nav ul{
+        padding-right: 20px;
+        width: 77%;
+    }
+}
+@media (max-width: 820px){
+    nav ul {
+        max-height: 0px;
+        background: rgb(221, 84, 29);
+        padding-top: 65px;
+        width: 100%;
+        padding-bottom: 10px;
+    }
+
+    nav.black ul {
+        background: rgb(221, 84, 29);
+    }
+    .showing {
+        max-height: 100vh;
+    }
+    nav ul li {
+        box-sizing: border-box;
+        width: 100%;
+        text-align: center;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+    .menu-icon{
+        display: block;
+    }
+    .carousel{
+        top: 100px;
+        z-index: -1;
+    }
 }
