--- a/css/product.css
+++ b/css/product.css
@@ -12,38 +12,74 @@ a {
 }
 
 .header {
-    height: 10vh;
     background: rgb(221, 84, 29);
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    box-shadow: 0px -5px 20px 0px black;
 }
 
 .nav {
-    height: 10vh;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 8%;
+    padding: 0 5%;
 }
 
 .nav .logo-top {
     color: white;
     font-size: 30px;
-    margin-left: 8%;
+    letter-spacing: 1px;
+    font-weight: 600;
+    margin-left: 5%;
+    text-decoration: none;
+    padding: 10px 0;
 }
 
 .nav ul {
     list-style: none;
+    padding-top: 10px;
+    float: right;
+    overflow: hidden;
+    transition: 1s;
 }
 
 .nav ul li {
     display: inline-block;
+    font-weight: 600;
 }
-
-.top-nav-link:not(:last-child) {
-    margin-right: 20px;
+.top-nav-link {
+    margin-left: 35px;
 }
-
 .nav ul li a {
     color: white;
+    font-size: 18px;
+}
+.menu-icon {
+    background: rgb(221, 84, 29);
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 80px;
+    box-shadow: 2px 0 7px rgba(0, 0, 0, 0.3);
+    display: none;
+}
+.bar-icon{
+    position: absolute;
+    right: 40px;
+    top: 30px;
+    cursor: pointer;
+}
+.bar{
+    width: 35px;
+    height: 6px;
+    background-color: #fff;
+    margin-bottom: 5px;
+    border-radius: 2px;
+    cursor: pointer;
 }
 
 /* ================================= */
@@ -402,7 +438,7 @@ ul {
 }
 
 .single_product {
-    padding-top: 16px;
+    padding-top: 100px;
     padding-bottom: 140px
 }
 
@@ -590,4 +626,75 @@ footer {
     color: black;
     text-align: center;
     padding-top: 20px;
+}
+
+@media (max-width: 1155px){
+    .nav{
+        width: 100%;
+    }
+    .nav ul li {
+        padding: 16px 1.7%;
+    }
+    .nav ul{
+        /* text-align: right; */
+        width: 80%;
+        float: right;
+        z-index: 3;
+    }
+}
+@media (max-width: 1145px){
+    .single_product{
+        padding-top: 170px;
+    }
+}
+@media (max-width: 950px){
+    .nav ul li {
+        padding: 16px 1.7%;
+    }
+    .nav ul{
+        padding-right: 20px;
+        width: 77%;
+    }
+}
+@media (max-width: 890px){
+    .logo-top{
+        z-index: 1;
+        position: fixed;
+        top: 0;
+        left: 14px;
+    }
+    .nav{
+        display: block;
+        padding-right: 0;
+    }
+    .nav ul{
+        width: 100%;
+    }
+    nav ul {
+        max-height: 0px;
+        background: rgb(221, 84, 29);
+        width: 100%;
+        padding-bottom: 10px;
+        position: absolute;
+        top: 60px;
+        width: 100%;
+        text-align: center;
+    }
+    .showing {
+        max-height: 100vh;
+    }
+    .nav ul li {
+        box-sizing: border-box;
+        width: 100%;
+        text-align: center;
+        padding-bottom: 13px;
+        margin-bottom: 0;
+        margin-left: 0;
+    }
+    .menu-icon{
+        display: block;
+    }
+    .single_product{
+        padding-top: 100px;
+    }
 }
